# mcgill.wtf

./: .gitignore  .prettierignore  .prettierrc  Cargo.toml  Dockerfile  README.md  data.json  fly.toml  justfile  package-lock.json  package.json  vite.config.ts
.github/workflows/: ci.yaml  deploy.yaml
client/: index.html  package-lock.json  package.json  tsconfig.json
client/src/: App.svelte  App.tsx  main.tsx
client/src/components/: Course.tsx
client/src/lib/: course.ts  payload.ts  search.ts  utils.ts
src/: arguments.rs  build.rs  cmd_ext.rs  command.rs  course.rs  entry.rs  extractor.rs  index.rs  loader.rs  main.rs  model.rs  options.rs  page.rs  params.rs  payload.rs  scraper.rs  search.rs  select.rs  server.rs  spawn.rs  subcommand.rs
