[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.65"
axum = "0.5.16"
axum-server = "0.4.2"
clap = { version = "3.2.21", features = ["derive"] }
env_logger = "0.9.0"
http = "0.2.8"
log = "0.4.17"
redis = "0.21.6"
reqwest = { version = "0.11.11", features = ["blocking"] }
scraper = "0.13.0"
serde = { version = "1.0.144", features = ["derive"] }
serde_json = "1.0.85"
tokio = { version = "1.21.1", features = ["rt"] }
tower-http = { version = "0.3.4", features = ["cors"] }
uuid = { version = "1.1.2", features = ["v5"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
unindent = "0.1.10"
