[package]
name = "server"
version = "0.0.0"
edition = "2021"

[dependencies]
anyhow = "1.0.70"
axum = "0.5.17"
axum-extra = { version = "0.3.7", features = ["spa"] }
axum-server = "0.4.7"
clap = { version = "4.2.1", features = ["derive"] }
env_logger = "0.9.3"
http = "0.2.9"
log = "0.4.17"
redis = "0.21.7"
reqwest = { version = "0.11.16", features = ["blocking"] }
scraper = "0.13.0"
serde = { version = "1.0.159", features = ["derive"] }
serde_json = "1.0.95"
tokio = { version = "1.27.0", features = ["rt"] }
tower-http = { version = "0.3.5", features = ["cors", "fs", "trace"] }
uuid = { version = "1.3.0", features = ["v5"] }

[dev-dependencies]
pretty_assertions = "1.3.0"
unindent = "0.1.11"
